# -Sonic-vault-Cryptography-Stegnography-

./: .gitignore  CRYPTO_MODULES.md  QUICK_REFERENCE.md  README.md  SYSTEM_GUIDE.md  cli.py  config.yaml  debug_audio.py  debug_binary.py  debug_roundtrip.py  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  tests.yml
assets/themes/: city_theme.json  forest_theme.json  rain_theme.json  space_theme.json
docs/academic/: design_decisions.md  future_work.md  literature_review.md
docs/technical/: api_reference.md  audio_encoding.md  crypto_spec.md  security_analysis.md
docs/user/: cli_reference.md  installation.md  troubleshooting.md  usage_guide.md
examples/: README.md
examples/advanced/: batch_processing.py  custom_themes.py  noise_resistance.py
examples/basic_usage/: decode_example.py  encode_example.py  generate_keys_example.py
examples/demo_files/: sample_messages.txt
frontend/: index.html  script.js  styles.css
scripts/: build_docs.sh  performance_benchmark.py  run_tests.sh  setup_environment.sh
src/: __init__.py
src/audio/: __init__.py  audio_analyzer.py  audio_processor.py  audio_utils.py  binary_encoder.py  sound_generator.py  timing_detector.py
src/core/: __init__.py  config.py  exceptions.py  sonic_vault.py
src/crypto/: __init__.py  aes_manager.py  crypto_utils.py  dsa_manager.py  key_derivation.py
src/utils/: __init__.py  file_utils.py  logger.py  morse_code.py  validation.py
tests/: __init__.py
tests/integration/: test_cli_commands.py  test_full_pipeline.py  test_performance.py
tests/unit/: test_aes_manager.py  test_binary_encoder.py  test_dsa_manager.py  test_morse_code.py  test_sonic_vault.py  test_sound_generator.py  test_validation.py
